Fix sentence in Motivation in README.org

--- a/README.org
+++ b/README.org
@@ -4,9 +4,9 @@
   that it would make experimenting with the dispatch technique and
   bechmarking it more comprehensively pretty easy.
 
-  Also SBCL's new immobile space feature ideally suited for this
-  dispatch technique: SBCL's equivalent of "general instances" with
-  class and "rack" pointers in [[http://metamodular.org/generic-dispatch.pdf][the paper]] are "instances" and
+  Also, SBCL's new immobile space feature seems ideally suited for
+  this dispatch technique: SBCL's equivalent of "general instances"
+  with class and "rack" pointers in [[http://metamodular.org/generic-dispatch.pdf][the paper]] are "instances" and
   "layouts". The latter are placed in immobile space where the gc does
   not move them. The idea is to use layout addresses where "stamps"
   are used in the paper.
